Initial stylesheet fiddling...

--- a/imageset/imageset.cfg
+++ b/imageset/imageset.cfg
@@ -17,8 +17,8 @@
 #
 
 # General Information about this style
-name = proBoot
-copyright = &copy; phpBB Group, 2007
+name = lonbrew-phpbb
+copyright = &copy; London Amateur Brewers, 2013
 version = 3.0.11
 
 # Images
