--- a/template/template.cfg
+++ b/template/template.cfg
@@ -17,8 +17,8 @@
 #
 
 # General Information about this template
-name = proBoot
-copyright = &copy; 2007 phpBB Group
+name = lonbrew-phpbb
+copyright = &copy; London Amateur Brewers, 2013
 version = 3.0.11
 
 # Defining a different template bitfield
