--- a/theme/theme.cfg
+++ b/theme/theme.cfg
@@ -19,8 +19,8 @@
 #
 
 # General Information about this theme
-name = proBoot
-copyright = &copy; phpBB Group, 2007
+name = lonbrew-phpbb
+copyright = &copy; London Amateur Brewers, 2013
 version = 3.0.11
 
 # Some configuration options
